# ked

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  buffer.c  buffer.h  editor.c  editor.h  la.c  la.h  main.c
.github/workflows/: build-on-push.yaml  cmake-build.yaml
